# Planified

./: README.md  meson.build
src/: meson.build
src/include/: app.h  common-widgets.h  common.h  derivable-widgets.h  dialogs.h  storage.h  widgets.h
src/planified-app/: agenda-widget.c  app-window.c  app.c  home-view.c  itinerary-widget-entry.c  itinerary-widget.c  meson.build  newentry-dialog.c  newtask-dialog.c  plan-dialog.c  planning-view.c  preferences-dialog.c  tag-container.c  task-container.c  task-list.c  task-widget.c  timetable-view.c  upcoming-list-item.c  upcoming-list.c  weather-widget.c
src/planified-common/: calendar-widget.c  common.c  confirm-dialog.c  date-chooser-widget.c  entry.c  meson.build  tag.c  task.c
src/resources/: app-window.ui  com.github.somebodyunknown.planified.gschema.xml  context-menus.ui  date-chooser-widget.ui  filter-popup-menu.ui  home-view.ui  itinerary-widget-entry.ui  meson.build  newentry-dialog.ui  newtask-dialog.ui  plan-dialog.ui  planified.gresource.xml  planning-view.ui  preferences-dialog.ui  style.css  task-container.ui  task-list.ui  task-widget-context-menu.ui  task-widget.ui  timetable-view.ui  upcoming-list-item.ui  weather-widget.ui
src/sqlite-manager/: dbio.c  meson.build  migrations.c
tests/: meson.build
